ingresos de productos bono

--- a/src/forms/frm_reg_producto.form
+++ b/src/forms/frm_reg_producto.form
@@ -44,7 +44,8 @@
                           <Component id="txt_proveedor" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="cbx_tipo_producto" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="cbx_afecto_icbper" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="cbx_clasificacion" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
@@ -82,6 +83,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbx_tipo_producto" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="cbx_afecto_icbper" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -460,6 +462,11 @@
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="cbx_afecto_icbper">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Afecto ICBPER"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
