--- a/src/vistas/rpt_ventas.form
+++ b/src/vistas/rpt_ventas.form
@@ -320,8 +320,10 @@
         <Component class="javax.swing.JComboBox" name="cbx_excel">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
+              <StringArray count="3">
                 <StringItem index="0" value="Detalle de Venta - Tienda - Cliente - Producto - Clasificacion - Vendedor"/>
+                <StringItem index="1" value="Registro de ventas"/>
+                <StringItem index="2" value="Registro de compras"/>
               </StringArray>
             </Property>
           </Properties>
