--- a/src/vistas/frm_ver_mis_productos2.form
+++ b/src/vistas/frm_ver_mis_productos2.form
@@ -10,9 +10,11 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane2" alignment="0" pref="960" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Component id="jScrollPane2" pref="960" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
                           <Component id="txt_kardex_descripcion" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jButton8" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btn_detalle_kardex" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -28,6 +30,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txt_kardex_descripcion" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="btn_detalle_kardex" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jButton8" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane2" pref="372" max="32767" attributes="0"/>
@@ -74,6 +77,17 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_detalle_kardexActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton8">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/icons/clipboard_text.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="ver PDF"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton8ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
