modificacion en consulta de datos, nueva forma de reporte

--- a/src/forms/frm_reg_ingreso.form
+++ b/src/forms/frm_reg_ingreso.form
@@ -591,6 +591,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/icons/currency.png"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Actualizar Lista"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
