--- a/src/vistas/rpt_ventas.form
+++ b/src/vistas/rpt_ventas.form
@@ -50,7 +50,6 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
@@ -210,10 +209,9 @@
         <Component class="javax.swing.JComboBox" name="cbx_excel">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Detalle de Venta - Tienda - Cliente - Producto - Clasificacion - Vendedor"/>
-                <StringItem index="1" value="Registro de ventas"/>
-                <StringItem index="2" value="Registro de compras"/>
+              <StringArray count="2">
+                <StringItem index="0" value="Registro de ventas"/>
+                <StringItem index="1" value=" "/>
               </StringArray>
             </Property>
           </Properties>
